front-app-k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: front
  name: deployment-front
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: front-2048
  replicas: 4
  template:
    metadata:
      labels:
        app.kubernetes.io/name: front-2048
    spec:
      containers:
      #- image: 737349677596.dkr.ecr.us-east-1.amazonaws.com/frontend/web-app:v1.0.2
      #- image: 109669590912.dkr.ecr.us-east-1.amazonaws.com/dev-ecr:latest
      - image: 737349677596.dkr.ecr.us-east-1.amazonaws.com/frontend/web-app:latest
        name: front-2048
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"  # Reemplaza con la cantidad adecuada de memoria
            cpu: "250m"      # Reemplaza con la cantidad adecuada de CPU
          limits:
            memory: "128Mi" # Reemplaza con la cantidad adecuada de memoria máxima
            cpu: "500m" 
        ports:
          - containerPort: 80
